# confluence_todoist

./: README.rst  pyproject.toml
src/confluence_todoist/: cli.py  confluence.py  todoist.py
